flux/apps/netbox/netbox.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: netbox

spec:
  selector:
    matchLabels:
      app: netbox
  
  template:
    metadata:
      labels:
        app: netbox
    
    spec:
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: media
        - name: reports
          persistentVolumeClaim:
            claimName: reports
        - name: scripts
          persistentVolumeClaim:
            claimName: scripts
        - name: config-dir
          configMap:
            name: config-dir
      
      containers:
        - name: netbox
          image: ghcr.io/netbox-community/netbox:v4.5.5
          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 8080

          volumes:
            - name: media
              mountPath: /opt/netbox/netbox/media
            - name: reports
              mountPath: /opt/netbox/netbox/reports
            - name: scripts
              mountPath: /opt/netbox/netbox/scripts
            - name: config-dir
              mountPath: /etc/netbox/config
        
          readinessProbe:
            httpGet:
              path: /login/
              port: http
            initialDelaySeconds: 60
            timeoutSeconds: 10
          
          livenessProbe:
            httpGet:
              path: /login/
              port: http
            initialDelaySeconds: 60
            timeoutSeconds: 10
