flux/apps/netbox/service_netbox.yaml
apiVersion: v1
kind: Service

metadata:
  name: netbox

spec:
  selector:
    app: netbox

  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
